# ros_moving_object

./: README.md
moving_object/: CMakeLists.txt  package.xml
moving_object/doc/: mainpage.dox
moving_object/include/moving_object/: consts.h  moving_object_ros.h  moving_objects.h  object_frame.h
moving_object/launch/: camera_tf_calibration.launch  moving_object.launch
moving_object/param/: moving_object.yaml
moving_object/src/: moving_object.cpp  moving_object_node.cpp  moving_object_ros.cpp  object_frame.cpp
moving_object_msgs/: CMakeLists.txt  package.xml
moving_object_msgs/msg/: MovingObject.msg  MovingObjectStamped.msg  MovingObjectsInFrame.msg  SocialObject.msg  SocialObjectsInFrame.msg
sample/ca_policy/: CMakeLists.txt  package.xml
sample/ca_policy/include/ca_policy/: ca_policy.h  ca_policy_pool.h  ca_policy_ros.h  policy_action.h  reconfig_policy_action.h
sample/ca_policy/include/ca_policy/turtlebot/: beeper_policy_action.h  led_policy_action.h
sample/ca_policy/include/ca_policy/waterbot/: ledbelt_policy_action.h
sample/ca_policy/launch/: ca_policy.launch  start_mo.py  stop_mo.py
sample/ca_policy/param/: ca_policy_common.turtlebot.yaml  ca_policy_common.waterbot.yaml
sample/ca_policy/param/turtlebot/: normal.yaml  social.yaml
sample/ca_policy/param/waterbot/: ca_policy_waterbot.yaml  social.yaml
sample/ca_policy/src/: ca_policy.cpp  ca_policy_node.cpp  ca_policy_pool.cpp  ca_policy_ros.cpp  reconfig_policy_action.cpp
sample/ca_policy/src/turtlebot/: beeper_policy_action.cpp  led_policy_action.cpp
sample/ca_policy/src/waterbot/: ledbelt_policy_action.cpp
sample/ca_policy_msgs/: CMakeLists.txt  package.xml
sample/ca_policy_msgs/msg/: CaPolicy.msg
sample/rosbag/: oa-topics.bag
