<?xml version="1.0"?>
<!--
Copyright (c) 2017 Intel Corporation
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package>
  <name>moving_object</name>
  <version>0.3.0</version>
  <description>a ROS package generating moving object messages according to object analytics output</description>
  <maintainer email="wei.zhi.liu@intel.com">Weizhi Liu</maintainer>
  <license>Apache2.0</license>
  <url type="repository">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance</url>
  <url type="bugtracker">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance/issues</url>
  <author>Weizhi Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moving_object_msgs</build_depend>
  <build_depend>object_analytics_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moving_object_msgs</run_depend>
  <run_depend>object_analytics_msgs</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_filters</run_depend>

</package>
